[package]
name = "xxh"
version = "0.1.2"
authors = ["ZhangYunHao <zhangyunhao116@gmail.com>"]
edition = "2018"

repository = "https://github.com/zhangyunhao116/xxh"
description = "XXHash algorithm implementation for Rust"
license = "MIT"
keywords = ["hash","xxhash"]
categories = ["algorithms"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bench]]
name = "bench"
harness = false
